--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -263,6 +263,6 @@ body {
     //you can also open or close the widget programmatically
     //by calling _hdWidget.toggleWidget() anywhere in your code
 </script>
-<script type='text/javascript' src='https://demohuemul.jitbit.com/helpdesk/js/support-widget-light.js'></script>
+<script type='text/javascript' src='https://huemulsolutions.jitbit.com/helpdesk/js/support-widget-light.js'></script>
     </body> 
 </html>
